# hakaton

./: .env.example  BACKEND_TEAM_PLAN.md  Dockerfile  Makefile  README_BACKEND.md  README_FRONTEND.md  README_PROMPTS.md  _env  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.prod.yml  docker-compose.yaml  pyproject.toml  readme.md  setup-server.sh
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 4e2b64d0648a_init.py  60672e32d54a_iaas_components.py  699113298584_iaas_components.py  ac6f3bf8838f_add_ai_vm_features.py
hakaton/: readme.md
hakaton/cloudiaas/: .env.example
hakaton/cloudiaas/backend/: alembic.ini  requirements.txt
src/application/services/: audit_service.py  auth_service.py  celery_config.py  exceptions.py  hypervisor_service.py  llm_service.py  metrics_service.py  network_service.py  quota_service.py  suggestion_service.py  tasks.py  tenant_service.py  users_service.py  vm_service.py
src/infrastructure/models/: __init__.py  audit_log.py  base.py  resource_quota.py  resource_usage.py  tenant.py  users.py  virtual_machine.py  virtual_network.py
src/infrastructure/repositories/: audit_log.py  base.py  network.py  quotas.py  tenant.py  tenant_scoped.py  users.py  virtual_machine.py  vm_metrics.py  vm_suggestion.py
src/infrastructure/schemas/: auth.py  quota.py  tenant.py  users.py  vm.py
src/infrastructure/shemas/: auth.py  tenant.py  vm.py
src/interfaces/api/: app.py
src/settings/: __init__.py  app.py  db.py  email.py  llm.py  redis.py
tests/: conftest.py  test_tenant_isolation.py  test_vm_lifecycle.py
(+25 files in other folders)
